# task-management-api

./: .example.env  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ruff.yml  tests.yml
dockerfiles/: .dockerignore  Dockerfile.dev  docker-compose.dev.yml
docs/: system-design.md
docs/api/: Insomnia_2025-06-26.yaml  openapi - 2025-06-26.json
migrations/: env.py
migrations/versions/: 2025_06_25_1620-d9651b8ea85b_initial_migration_with_all_models.py  2025_06_25_1739-b6b2838977e8_initial_migration_with_all_models.py  2025_06_26_1142-e765c0153ed3_initial_migration_with_all_models.py  2025_06_26_1336-7cf4da5d401b_initial_migration_with_all_models.py
scripts/: add_file_paths.py  db_management.py  init-db.sql
src/: main.py
src/app/: config.py  dependencies.py  factory.py
src/app/core/: config.py  database.py  factory.py
src/app/models/: __init__.py  base.py  enums.py  project.py  task.py  team.py  user.py
src/app/repositories/: __init__.py  base_repository.py  task_repository.py  user_repository.py
src/app/routers/: __init__.py  auth.py  tasks.py  users.py
src/app/schemas/: __init__.py  auth.py  task.py  user.py
src/app/services/: __init__.py  auth_service.py  task_service.py  user_service.py
src/app/utils/: __init__.py  dates.py
tests/: conftest.py  test_auth.py  test_models.py  test_repositories.py  test_routers.py  test_tasks.py
tests/core/: test_config.py  test_database.py
tests/models/: test_project.py  test_task.py  test_team.py  test_user.py
